@@ -1,0 +1,11 @@
+<table xmlns="http://www.w3.org/1999/xhtml"
+       xmlns:tal="http://xml.zope.org/namespaces/tal"
+       tal:default-expression="path">
+  <tr tal:repeat="row table">
+    <td tal:repeat="c row/values">
+      <span tal:define="d python: c + 1"
+            tal:attributes="class string:column-${d}"
+            tal:content="d" />
+    </td>
+  </tr>
+</table>
