@@ -182,6 +182,38 @@ class FileBenchmarkTestCase(BaseTestCase):
         print "zope.pagetemplate: %.2f" % t_zope
         print "                   %.2fX" % (t_zope/t_z3c)
 
+    @benchmark(u"Big table (path) File")
+    def testBigTablePathFile(self):
+        table = self.table
+
+        files = os.path.abspath(os.path.join(__file__, '..', 'input'))
+        def testfile(name):
+            return os.path.join(files, name)
+
+        z3cfile = z3c.pt.PageTemplateFile(
+            testfile('bigtable_path_z3c.pt'))
+
+        zopefile = zope.pagetemplate.pagetemplatefile.PageTemplateFile(
+            testfile('bigtable_path_zope.pt'))
+
+        t_z3c = timing(z3cfile.render, table=table, request=object())
+        t_zope = timing(zopefile, table=table, request=object())
+
+        print "z3c.pt:            %.2f" % t_z3c
+        print "zope.pagetemplate: %.2f" % t_zope
+        print "                   %.2fX" % (t_zope/t_z3c)
+
+        print "--------------------------"
+        print " Second rendering"
+        print "--------------------------"
+
+        t_z3c = timing(z3cfile.render, table=table, request=object())
+        t_zope = timing(zopefile, table=table, request=object())
+
+        print "z3c.pt:            %.2f" % t_z3c
+        print "zope.pagetemplate: %.2f" % t_zope
+        print "                   %.2fX" % (t_zope/t_z3c)
+
 # Use a custom context to add real i18n lookup
 
 from zope.i18n import translate
